* Extracted collection of input values into a method. * Added `LoanApplicationRequest` class to hold input values and pass to other methods/classes. * Extracted validation logic to `DefaultLoanApplicationValidator` class implementing `ILoanApplicationValidator` interface. * Extracted code to run validation, logic to calculate metrics and printing of the metrics to `LoanApplicationWriterForConsole` class implementing `ILoanApplicationWriter` interface. * Added a test project for testing the validation logic.

--- a/LendingPlatform/LendingPlatform.csproj
+++ b/LendingPlatform/LendingPlatform.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <!-- Unit Testing - To make internal visible to tests -->
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+  </ItemGroup>
+
 </Project>
