--- a/LendingPlatform/LendingPlatform.csproj
+++ b/LendingPlatform/LendingPlatform.csproj
@@ -12,4 +12,8 @@
     <InternalsVisibleTo Include="$(AssemblyName).Tests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
